# term39

./: .gitignore  BUILD_FRAMEBUFFER.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  TESTING_FRAMEBUFFER.md  build-deb.sh  build-framebuffer.sh  build-macos-dmg.sh  build-macos-pkg.sh  build.rs  debug_pty.sh  deploy-aur.sh  deploy-homebrew.sh  installer.iss  rust-analyzer.toml  test_escape.sh
.cargo/: config.toml
.github/: FUNDING.yml
.github/workflows/: ci.yml  release.yml
aur/: PKGBUILD  PKGBUILD-bin  README.md
release/: term39-aarch64-linux-static
src/: ansi_handler.rs  app_state.rs  button.rs  charset.rs  cli.rs  clipboard_manager.rs  color_utils.rs  config.rs  config_manager.rs  config_window.rs  context_menu.rs  debug_log.rs  dialog_handlers.rs  error_dialog.rs  fb_config.rs  fb_setup_window.rs  fuzzy_matcher.rs  gpm_control.rs  gpm_handler.rs  info_window.rs  initialization.rs  keyboard_handlers.rs  keyboard_mode.rs  main.rs  mouse_input.rs  platform.rs  prompt.rs  render_backend.rs  render_frame.rs  selection.rs  session.rs  slight_input.rs  splash_screen.rs  term_grid.rs  terminal_emulator.rs  terminal_window.rs  theme.rs  toast.rs  ui_render.rs  video_buffer.rs  (+4 more)
src/app/: app_state.rs  cli.rs  config_manager.rs  event_loop.rs  initialization.rs  mod.rs  panic_handler.rs  platform.rs  session.rs
src/framebuffer/: TERMINUS-FONT-LICENSE.txt  cli_handlers.rs  fb_config.rs  fb_renderer.rs  fb_setup_window.rs  font_manager.rs  mod.rs  mouse_input.rs  setup_wizard.rs  text_modes.rs
src/input/: gpm_control.rs  keybinding_profile.rs  keyboard_handlers.rs  mod.rs  mouse_handlers.rs
src/input/mouse/: bsd.rs  cursor.rs  linux.rs  mod.rs  types.rs
src/lockscreen/: lockscreen.rs  mod.rs  pin_setup.rs  signal_sender.rs
src/lockscreen/auth/: macos_auth.rs  mod.rs  pam_auth.rs  pin_auth.rs  stub_auth.rs  windows_auth.rs
src/mouse_input/: bsd.rs  cursor.rs  mod.rs  types.rs
src/persist/: client.rs  daemon.rs  forker.rs  mod.rs  protocol.rs  socket.rs
src/rendering/: ansi_parser.rs  charset.rs  color_utils.rs  mod.rs  render_backend.rs  render_frame.rs  theme.rs  video_buffer.rs
src/term_emu/: ansi_handler.rs  mod.rs  selection.rs  term_grid.rs  terminal_emulator.rs  terminal_renderer.rs
src/ui/: button.rs  config_action_handler.rs  config_window.rs  context_menu.rs  dialog_handlers.rs  error_dialog.rs  info_window.rs  mod.rs  prompt.rs  simple_input.rs  slight_input.rs  splash_screen.rs  toast.rs  ui_render.rs
src/ui/widgets/: battery.rs  clipboard.rs  command_center.rs  datetime.rs  exit.rs  mod.rs  network.rs  new_term.rs  system_menu.rs  topbar.rs
src/utils/: command_history.rs  command_indexer.rs  fuzzy_matcher.rs  mod.rs
src/window/: base.rs  manager.rs  mod.rs  mode_handlers.rs  number_overlay.rs  terminal_window.rs
