[package]
name = "term39"
version = "0.11.0"
edition = "2024"
license = "MIT"
authors = ["Alejandro Quintanar"]
description = "A modern, retro-styled terminal multiplexer with a classic MS-DOS aesthetic"
repository = "https://github.com/alejandroqh/term39"
homepage = "https://github.com/alejandroqh/term39"
readme = "README.md"
keywords = ["terminal", "multiplexer", "tui", "dos", "retro"]
categories = ["command-line-utilities"]
exclude = [
    "assets/*",
    ".github/*",
    ".git/*",
]

[features]
default = ["clipboard", "framebuffer-backend"]
clipboard = ["dep:arboard"]
framebuffer-backend = ["dep:framebuffer", "dep:memmap2", "dep:flate2"]

[profile.release]
strip = true
lto = true

[dependencies]
chrono = "0.4.42"
crossterm = { version = "0.29.0", default-features = false, features = ["events", "bracketed-paste", "windows"] }
portable-pty = "0.9"
vte = "0.15"
libc = "0.2"
nix = { version = "0.30", features = ["poll"] }
filedescriptor = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.9"
dirs = "6.0"
directories = "6.0"
clap = { version = "4.5", features = ["derive"] }
arboard = { version = "3.4", optional = true }
battery = "0.7"

# Framebuffer backend dependencies (Linux only)
[target.'cfg(target_os = "linux")'.dependencies]
framebuffer = { version = "0.3", optional = true }
memmap2 = { version = "0.9", optional = true }
flate2 = { version = "1.0", optional = true }

[package.metadata.deb]
maintainer = "Alejandro Quintanar <a@q39.dev>"
copyright = "2025, Alejandro Quintanar <a@q39.dev>"
license-file = ["LICENSE", "4"]
extended-description = """\
A modern, retro-styled terminal multiplexer with a classic MS-DOS aesthetic. \
Features a full-screen text-based interface with authentic DOS-style rendering, \
supporting both Unicode and ASCII rendering modes. Includes optional framebuffer \
backend for direct Linux console rendering with pixel-perfect DOS text modes."""
depends = "$auto"
section = "utils"
priority = "optional"
assets = [
    ["target/release/term39", "usr/bin/", "755"],
    ["README.md", "usr/share/doc/term39/README.md", "644"],
]

[package.metadata.generate-rpm]
license = "MIT"
assets = [
    { source = "target/release/term39", dest = "/usr/bin/term39", mode = "755" },
    { source = "README.md", dest = "/usr/share/doc/term39/README.md", mode = "644" },
    { source = "LICENSE", dest = "/usr/share/doc/term39/LICENSE", mode = "644" },
]
